refactor: remove entire DashboardService class and its associated helper methods